[tool.poetry]
name = "asterisk-prometheus-exporter"
version = "1.1.0"
description = "Prometheus exporter for Asterisk using the Asterisk Manager Interface (AMI)"
authors = ["GONICUS GmbH"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "=3.12.1"
asterisk-ami = "=0.1.7"
prometheus-client = "=0.19.0"
pyyaml = "^6.0"
jsonschema = "^4.20.0"

[build-system]
requires = ["poetry-core=1.3.2"]
build-backend = "poetry.core.masonry.api"
